# fialyzer

./: .gitignore  .gitmodules  Makefile  OMakefile  README.md  erl_crash.dump  fialyzer.install  fialyzer.opam  index.html
.circleci/: config.yml
benchmark/: compile.sh  dune  run_benchmark.sh
benchmark/cases/call_mod_func2000/: mod_0.erl  mod_1.erl  mod_10.erl  mod_100.erl  mod_1000.erl  mod_1001.erl  mod_1002.erl  mod_1003.erl  mod_1004.erl  mod_1005.erl  mod_1006.erl  mod_1007.erl  mod_1008.erl  mod_1009.erl  mod_101.erl  mod_1010.erl  mod_1011.erl  mod_1012.erl  mod_1013.erl  mod_1014.erl  mod_1015.erl  mod_1016.erl  mod_1017.erl  mod_1018.erl  mod_1019.erl  mod_102.erl  mod_1020.erl  mod_1021.erl  mod_1022.erl  mod_1023.erl  mod_1024.erl  mod_1025.erl  mod_1026.erl  mod_1027.erl  mod_1028.erl  mod_1029.erl  mod_103.erl  mod_1030.erl  mod_1031.erl  mod_1032.erl  (+1960 more)
docs/: derivation-rules.md  derivation-rules.saty  local.satyh
lib/: ast.ml  ast_intf.ml  bif.ml  bif.mli  common.ml  common.mli  constant.ml  constraint.ml  constraint.mli  context.ml  context.mli  derivation.ml  derivation.mli  dune  erl_type.ml  erl_type.mli  etf_util.ml  etf_util.mli  from_erlang.ml  from_erlang.mli  jbuild  known_error.ml  known_error.mli  log.ml  log.mli  mfa.ml  plt.ml  plt.mli  poly_map.ml  solver.ml  solver.mli  type.ml  type_check.ml  type_check.mli  type_variable.ml  type_variable.mli  types.ml  types.mli  variable.ml  variable.mli
odoc/: index.html
odoc/fialyzer/: index.html
odoc/fialyzer/Fialyzer/: index.html
odoc/fialyzer/Fialyzer__Ast/: index.html
odoc/fialyzer/Fialyzer__Bif/: index.html
odoc/fialyzer/Fialyzer__Common/: index.html
odoc/fialyzer/Fialyzer__Constant/: index.html
odoc/fialyzer/Fialyzer__Constraint/: index.html
odoc/fialyzer/Fialyzer__Context/: index.html
odoc/fialyzer/Fialyzer__Derivation/: index.html
odoc/fialyzer/Fialyzer__Erl_type/: index.html
odoc/fialyzer/Fialyzer__Etf_util/: index.html
odoc/fialyzer/Fialyzer__From_erlang/: index.html
odoc/fialyzer/Fialyzer__Known_error/: index.html
odoc/fialyzer/Fialyzer__Log/: index.html
samples/: fac.erl  specs.erl  test01.beam  test01.erl  test02.beam  test02.erl  test03.beam  test03.erl
samples/21/: fac.beam  test01.beam  test02.beam  test03.beam
src/: OMakefile  fromErlang.ml  fromErlang.mli  jbuild  main.ml  types.ml  types.mli
test/: dune  test_derivation.ml  test_plt.ml  test_solver.ml
test/blackbox-test/: .gitignore  compile.sh  dune  minimal.plt  run_time_comparison.sh  test.sh
test/blackbox-test/test-cases/: anon_rec_fun.erl  anon_rec_fun.expected  auto_import.erl  basic.erl  basic.expected  binary_bitstring_error.erl  binary_bitstring_error.expected  case175.erl  case_expr.erl  case_expr_error.erl  case_expr_error.expected  case_expr_error02.erl  case_expr_error02.expected  case_univ_pattern.erl  case_univ_pattern.expected  discrep1.erl  discrep1.expected  fac.erl  fac_error.erl  fac_error.expected  identifier_is_union_of_pid_port_ref.erl  identifier_is_union_of_pid_port_ref_error.erl  identifier_is_union_of_pid_port_ref_error.expected  list_case_expr_error.erl  map_success.erl  pid_reference_conflict_error.erl  pid_reference_conflict_error.expected  plt_using_error.erl  plt_using_error.expected  records.erl  records.expected  spec_error.erl  spec_error.expected  sup_pid_port.erl  try_catch_expr.erl  tuple_error.erl  tuple_error.expected
test/unit-test/: dune  test_common.ml  test_derivation.ml  test_from_erlang.ml  test_plt.ml  test_solver.ml  test_type.ml
(+46 files in other folders)
