opam-version: "1.2"
name: "fialyzer"
maintainer: ["amutake <amutake.s@mail.com>" "yutopp <yutopp@gmail.com>"]
authors: ["amutake <amutake.s@gmail.com>" "yutopp <yutopp@gmail.com>"]
homepage: "https://github.com/fialyzer/fialyzer"
bug-reports: "https://github.com/fialyzer/fialyzer/issues"
dev-repo: "git+https://github.com/fialyzer/fialyzer.git"
license: "Apache-2.0"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {build}
  "batteries"
  "obeam"
  "bitstring"
  "ppx_sexp_conv" {build}
  "sexplib"
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Faster Implementation of Dialyzer
"
